<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_failed_connect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/todo_image_error_load_data"
        android:src="@drawable/ic_error_load_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_failed_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_load_data"
        app:layout_constraintEnd_toEndOf="@+id/iv_failed_connect"
        app:layout_constraintStart_toStartOf="@+id/iv_failed_connect"
        app:layout_constraintTop_toBottomOf="@+id/iv_failed_connect" />

    <Button
        android:id="@+id/btn_refresh"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/refresh"
        app:icon="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="@+id/tv_failed_connect"
        app:layout_constraintStart_toStartOf="@+id/tv_failed_connect"
        app:layout_constraintTop_toBottomOf="@+id/tv_failed_connect" />

</androidx.constraintlayout.widget.ConstraintLayout>