<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_item_image"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:contentDescription="@string/todo_item_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1.5:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        tools:src="@tools:sample/backgrounds/scenic" />


    <TextView
        android:id="@+id/tv_item_title"
        style="@style/ItemTitleSuggestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_item_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_title_item" />

    <TextView
        android:id="@+id/tv_item_subtitle"
        style="@style/ItemSubtitleSuggestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_item_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
        tools:text="@string/sample_subtitle_item" />


</androidx.constraintlayout.widget.ConstraintLayout>